fixed dropdown width to work on mobile

--- a/style.css
+++ b/style.css
@@ -54,7 +54,7 @@ h5 {
 }
 
 #parksChooserDiv {
-	width: 375px;
+	width: 300px;
 }
 
 #desktop-site {
